Fixing bug 245809. Implement event.returnValue (IE:ism) for beforeunload events as the mechansim for passing data back to the browser from a beforeunload handler that was registerd with addEventListener(). r=bzbarsky@mit.edu, sr=peterv@propagandism.org